# agentic-ai-research-assistant

./: .gitignore  LICENSE  README.md  app.py  main.py  pyproject.toml  requirements.txt
src/: __init__.py  agent.py  config.py  tools.py
